# project_tracker

./: .gitignore  Cargo.toml  Dockerfile  INSTALL.md  README.md  build.rs  save.project_tracker
assets/: Project Tracker.desktop
examples/: generate_stresstest_database.rs  migrate_database_to_task_descriptions.rs  migrate_db_keys_to_uuid.rs  print_google_tasks_info.rs  run_client_with_localhost_server.rs  run_localhost_server.rs  run_sandboxed.rs  run_stresstest.rs  run_with_localhost_server.rs
iced_date_picker/: Cargo.toml  README.md
iced_date_picker/src/: date.rs  date_picker.rs  lib.rs  overlay.rs  style.rs
iced_drop/: Cargo.toml
iced_drop/src/: lib.rs
iced_drop/src/widget/: droppable.rs
iced_drop/src/widget/operation/: drop.rs
project_tracker_core/: Cargo.toml
project_tracker_core/examples/: create_empty_database.rs  generate_stresstest_database.rs
project_tracker_core/src/: database.rs  date.rs  lib.rs  ordered_hash_map.rs  project.rs  task.rs  task_tag.rs
project_tracker_core/tests/: database.rs  ordered_hash_map.rs  project_task_iter.rs
project_tracker_gui/: Cargo.toml
project_tracker_gui/examples/: generate_stresstest_database.rs  migrate_database_to_task_descriptions.rs  print_google_tasks_info.rs
project_tracker_gui/src/: lib.rs  project_tracker.rs  theme_mode.rs
project_tracker_gui/src/components/: animation.rs  buttons.rs  color_palette.rs  completion_bar.rs  confirm_modal.rs  date_widget.rs  dropzone.rs  duration_widget.rs  file_location.rs  loading_screen.rs  manage_task_tags_modal.rs  mod.rs  modals.rs  palette_modal.rs  project_preview.rs  scrollable.rs  seperator.rs  settings_modal.rs  stopwatch_clock.rs  switch_project_modal.rs  task_list.rs  task_tags_widget.rs  task_widget.rs  unfocusable.rs
project_tracker_gui/src/core/: database.rs  mod.rs  ordered_hash_map.rs  preferences.rs  project.rs  task.rs  task_state.rs  task_tag.rs
project_tracker_gui/src/hot_reload/: mod.rs
project_tracker_gui/src/icons/: mod.rs
project_tracker_gui/src/integrations/: google_tasks.rs  mod.rs  server.rs
project_tracker_gui/src/modals/: create_task_modal.rs  error_msg_modal.rs  mod.rs  settings_modal.rs  task_modal.rs
project_tracker_gui/src/pages/: mod.rs  overview_page.rs  project_page.rs  settings_page.rs  sidebar_page.rs  stopwatch_page.rs
project_tracker_gui/src/styles/: button_styles.rs  card_style.rs  checkbox_style.rs  completion_bar_style.rs  confirm_modal_style.rs  constants.rs  container_styles.rs  fonts.rs  mod.rs  modal_style.rs  scrollable.rs  text.rs  text_editor.rs  text_input.rs  theme.rs
project_tracker_gui/tests/: database.rs  ordered_hash_map.rs
project_tracker_server/: Cargo.toml  build.rs
project_tracker_server/src/: admin_infos.rs  cpu_usage.rs  dashboard.rs  encryption.rs  error.rs  get_admin_infos.rs  lib.rs  load_database.rs  logs.rs  main.rs  native_ws.rs  password_hash.rs  server.rs  utils.rs  ws.rs
project_tracker_server/src/web_server/: get_admin_infos.rs  index.html  load_database.rs  mod.rs  modified_ws.rs  native_ws.rs  script.js  service-worker.js  style.css  utils.rs  ws.rs
project_tracker_server/src/web_server/admin/: index.html  script.js
project_tracker_server/src/web_server/login/: index.html  script.js
project_tracker_server/src/web_server/static/: index.html  manifest.json  script.js  service-worker.js  style.css
project_tracker_server/src/web_server/static/admin/: index.html  script.js  style.css
project_tracker_server/src/web_server/static/login/: index.html  script.js  style.css
scripts/: Project Tracker Base.desktop  Project Tracker.desktop  enable_server_linux_service.sh  generate_deb.sh  generate_rpm.sh  generate_server_deb.sh  generate_server_rpm.sh  install_linux.sh  install_project_tracker_linux.sh  install_project_tracker_server_linux.sh  install_server_linux.sh  install_server_with_dashboard_linux.sh  install_server_with_web_linux.sh  install_windows.bat  project_tracker_local_user.desktop  project_tracker_server.postinst  project_tracker_server.postrm  project_tracker_server.service  project_tracker_system_wide.desktop  remove_server_linux_service.sh  set_server_password_linux.sh
src/: already_opened_app.rs  lib.rs  main.rs  page.rs  preferences.rs  project.rs  project_tracker.rs  saved_state.rs  task.rs  theme_mode.rs  window_icon.rs
src/components/: animation.rs  buttons.rs  color_palette.rs  completion_bar.rs  create_new_project.rs  create_new_project_modal.rs  create_new_task.rs  date_widget.rs  dropzone.rs  duration_widget.rs  file_location.rs  green_button_style.rs  green_round_button_style.rs  home_button.rs  loading_screen.rs  markdown.rs  mod.rs  modals.rs  on_input.rs  project_preview.rs  scrollable.rs  seperator.rs  split.rs  stopwatch_clock.rs  task_description.rs  task_list.rs  task_widget.rs  unfocusable.rs
src/core/: database.rs  date.rs  mod.rs  ordered_hash_map.rs  preferences.rs  project.rs  saved_state.rs  source_code_todo.rs  task.rs  task_filter.rs  task_state.rs  task_tag.rs
src/icons/: mod.rs
src/integrations/: code_editor.rs  google_tasks.rs  mod.rs  server.rs
src/modals/: confirm_modal.rs  create_task_modal.rs  error_msg_modal.rs  manage_task_tags_modal.rs  mod.rs  settings_modal.rs  task_modal.rs  wait_closing_modal.rs
src/pages/: mod.rs  overview_page.rs  project_list_page.rs  project_page.rs  settings_page.rs  sidebar_page.rs  start_page.rs  stopwatch_page.rs
src/project/: mod.rs  task.rs  task_filter.rs  task_state.rs
src/server/: main.rs  mod.rs  run_server.rs
src/styles/: border_radius.rs  button_styles.rs  card_style.rs  checkbox_style.rs  colors.rs  completion_bar_style.rs  constants.rs  container_style.rs  container_styles.rs  fonts.rs  markdown_style.rs  mod.rs  paddings.rs  scrollable.rs  size.rs  spacing.rs  split_style.rs  svg_styles.rs  text.rs  text_editor.rs  text_input.rs  text_styles.rs  theme.rs
src/synchronization/: filesystem.rs  mod.rs  server.rs
src/synchronization/server/: error.rs  mod.rs  subscription.rs
tests/: database.rs  localhost.rs  localhost_server_test.rs  ordered_hash_map.rs
