[package]
name = "project_tracker"
description = "personal project todo list tracker"
version = "0.1.0"
edition = "2021"
authors = ["Peanutt42 p3anutt42@gmail.com"]
repository = "https://github.com/Peanutt42/project_tracker"
license = "MIT"

[workspace]
members = ["project_tracker_core", "project_tracker_server", "iced_drop"]

[dependencies]
project_tracker_core = { path = "project_tracker_core" }
project_tracker_server = { path = "project_tracker_server", default-features = false }
iced = { workspace = true }
iced_aw = { workspace = true }
iced_drop = { path = "iced_drop" }
iced_fonts = "0.1.1"
tokio = { workspace = true }
async-tungstenite = { workspace = true }
rodio = "0.19"
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
indexmap = { workspace = true }
directories = { workspace = true }
dark-light = "1.1.1"
rand = { workspace = true }
rfd = { workspace = true }
open = "5.1.4"
filetime = { workspace = true }
chrono = { workspace = true }
fuzzy-matcher = "0.3.7"
libc = "0.2"
image = "0.24"
thiserror = { workspace = true }
single-instance = "0.3.3"
walkdir = "2.5"
humantime = { workspace = true }
rayon = "1.10"

[target.'cfg(target_os = "windows")'.dependencies]
winrt-notification = "0.5.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
notify-rust = "4"

[dev-dependencies]
tokio = { version = "1.4", features = ["fs", "rt-multi-thread", "macros", "net", "io-util"] }

[workspace.dependencies]
iced = { version = "0.13.1", features = ["image", "tokio", "canvas", "advanced", "lazy", "markdown", "highlighter"] }
iced_aw = { version = "0.11", default-features = false, features = ["spinner", "card", "quad", "date_picker", "drop_down"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.4", features = ["serde"] }
bincode = "1.3.3"
rand = "0.8.5"
tokio = { version = "1.4", features = ["fs", "macros", "net", "io-util", "rt-multi-thread", "sync"] }
chrono = { version = "0.4.38", features = ["serde"] }
filetime = "0.2"
thiserror = "1.0"
directories = "5.0.1"
rfd = "0.14.1"
async-tungstenite = { version = "0.24", features = ["tokio-rustls-webpki-roots", "tokio"] }
humantime = "2.1"

[build-dependencies]
winresource = "0.1.17"

[package.metadata.deb]
assets = [
	{ source = "target/release/project_tracker", dest = "/usr/bin/project_tracker", mode = "755" },
	{ source = "assets/icon.png", dest = "/usr/share/icons/hicolor/512x512/apps/project_tracker.png", mode = "644" },
	{ source = "assets/project_tracker.desktop", dest = "/usr/share/applications/project_tracker.desktop", mode = "644" },
]

[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/project_tracker", dest = "/usr/bin/project_tracker", mode = "755" },
	{ source = "assets/icon.png", dest = "/usr/share/icons/hicolor/512x512/apps/project_tracker.png", mode = "644" },
	{ source = "assets/project_tracker.desktop", dest = "/usr/share/applications/project_tracker.desktop", mode = "644" },
]