[package]
name = "project_tracker"
description = "personal project todo list tracker"
version = "0.1.0"
edition = "2021"
authors = ["Peanutt42 p3anutt42@gmail.com"]
repository = "https://github.com/Peanutt42/project_tracker"
license = "MIT"

[workspace]
members = [
	"project_tracker_core",
	"project_tracker_server",
	"iced_drop",
	"iced_date_picker",
]

[dependencies]
project_tracker_core = { path = "project_tracker_core" }
project_tracker_server = { path = "project_tracker_server" }
iced = { workspace = true }
iced_aw = { workspace = true }
iced_drop = { path = "iced_drop" }
iced_date_picker = { path = "iced_date_picker" }
iced_fonts = { workspace = true }
pulldown-cmark = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-tungstenite = { workspace = true }
tokio-native-tls = "0.3.1"
rodio = "0.20.1"
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
toml = "0.8.19"
directories = { workspace = true }
dark-light = "2.0"
uuid = { workspace = true }
rfd = { workspace = true }
open = "5.1.4"
filetime = { workspace = true }
chrono = { workspace = true }
fuzzy-matcher = "0.3.7"
image = "=0.24"
thiserror = { workspace = true }
single-instance = "0.3.3"
walkdir = "2.5"
humantime = { workspace = true }
rayon = "1.10"
which = "7.0.1"
async-watcher = "0.3.0"
flume = "0.11.1"

[target.'cfg(target_os = "windows")'.dependencies]
winrt-notification = "0.5.1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
notify-rust = "4"


[workspace.dependencies]
iced = { version = "0.13.1", features = [
	"image",
	"tokio",
	"canvas",
	"advanced",
	"lazy",
	"markdown",
	"highlighter",
] }
iced_aw = { version = "0.12.2", default-features = false, features = [
	"spinner",
	"card",
	"quad",
	"drop_down",
] }
iced_fonts = "0.2.1"
pulldown-cmark = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
tokio = { version = "1.44.2", features = [
	"fs",
	"macros",
	"net",
	"io-util",
	"rt-multi-thread",
	"sync",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono = { version = "0.4.40", features = ["serde"] }
filetime = "0.2"
thiserror = "2.0"
directories = "6.0"
rfd = "0.15.3"
async-tungstenite = { version = "0.29.1", features = [
	"tokio-native-tls",
	"tokio",
] }
humantime = "2.2"

[build-dependencies]
winresource = "0.1.17"

[package.metadata.deb]
assets = [
	{ source = "target/release/project_tracker", dest = "/usr/bin/project_tracker", mode = "755" },
	{ source = "assets/icon.png", dest = "/usr/share/icons/hicolor/512x512/apps/project_tracker.png", mode = "644" },
	{ source = "scripts/project_tracker_system_wide.desktop", dest = "/usr/share/applications/project_tracker.desktop", mode = "644" },
]

[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/project_tracker", dest = "/usr/bin/project_tracker", mode = "755" },
	{ source = "assets/icon.png", dest = "/usr/share/icons/hicolor/512x512/apps/project_tracker.png", mode = "644" },
	{ source = "scripts/project_tracker_system_wide.desktop", dest = "/usr/share/applications/project_tracker.desktop", mode = "644" },
]