[package]
name = "project_tracker_core"
version = "0.1.0"
edition = "2021"
authors = ["Peanutt42 p3anutt42@gmail.com"]
repository = "https://github.com/Peanutt42/project_tracker"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
directories = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
filetime = { workspace = true }
humantime = { workspace = true }