[package]
name = "project_tracker_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12.0", features = ["image", "tokio"] }
iced_aw = { version = "0.9.3", default-features = false, features = ["spinner", "split", "quad", "floating_element", "icons"] }
tokio = { version = "1.0", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
directories = "5.0.1"
dark-light = "1.1.1"
rand = "0.8.5"
rfd = "0.14.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["fs", "rt", "macros"] }