[package]
name = "project_tracker_gui"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Peanutt42/project_tracker"

[dependencies]
iced = { workspace = true }
iced_aw = { workspace = true }
iced_drop = { path = "../iced_drop" }
notify-rust = "4"
tokio = { version = "1.0", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.4", features = ["serde"] }
once_cell = "1.19.0"
directories = "5.0.1"
dark-light = "1.1.1"
rand = "0.8.5"
rfd = "0.14.1"
open = "5.1.4"
webbrowser = "1.0.2"
walkdir = "2.5"
filetime = "0.2"
pretty-duration = "0.1.1"
chrono = "0.4.38"
fuzzy-matcher = "0.3.7"
libc = "0.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["fs", "rt", "macros"] }