[package]
name = "project_tracker_server"
description = "Runs the server to host the Project Tracker synchronization"
version = "0.1.0"
edition = "2021"
authors = ["Peanutt42 p3anutt42@gmail.com"]
repository = "https://github.com/Peanutt42/project_tracker"
license = "MIT"

[dependencies]
project_tracker_core = { path = "../project_tracker_core" }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
async-tungstenite = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
humantime = { workspace = true }
sha2 = "0.10.8"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
warp = { version = "0.3.7", features = ["websocket", "tls"] }
systemstat = "0.2.4"

[features]
default = ["web_server"]
web_server = []

[package.metadata.deb]
assets = [
	{ source = "target/release/project_tracker_server", dest = "/usr/bin/project_tracker_server", mode = "755" }
]
systemd-units = { enable = true, start = true, unit-name = "project_tracker_server" }
maintainer-scripts = "../scripts/"


[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/project_tracker_server", dest = "/usr/bin/project_tracker_server", mode = "755" },
	{ source = "scripts/project_tracker_server.service", dest = "/usr/lib/systemd/system/project_tracker_server.service", mode = "644" }
]
post_install_script = "scripts/project_tracker_server.postinst"
post_uninstall_script = "scripts/project_tracker_server.postrm"